fix bug where background color cut off when scrolling, add comment input component

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,4 +1,3 @@
 .home {
   background-color: rgb(210, 231, 255);
-  height: 100vw;
 }
